:zap: meta tag 수정

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,15 +12,15 @@
     <meta name="keywords" content="식물, 식집사, 식테크, 키우기" />
     <meta name="author" content="KittyHiker" />
 <!-- Open Graph -->
-    <meta name="og:PlantHiker" content="플랜트하이커" />
+    <meta name="og:site_name" content="플랜트하이커" />
     <meta name="og:title" content="식집사의 기본, 플랜트하이커" />
     <meta
-    name="description"
+    name="og:description"
     content="사랑하는 식물을 똑똑하게 돌보는 법! 플랜트하이커에서 만나요." />
     <meta name="og:type" content="website" />
     <meta name="og:url" 
     content="http://plant-hiker.s3-website.ap-northeast-2.amazonaws.com/" />
-    <meta name="og:url" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D3ISGj2Av8WA&psig=AOvVaw1jc1myf91BXCAdHJK1FD9N&ust=1670222401922000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCLDcgrit3_sCFQAAAAAdAAAAABAE" />
+    <meta name="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D3ISGj2Av8WA&psig=AOvVaw1jc1myf91BXCAdHJK1FD9N&ust=1670222401922000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCLDcgrit3_sCFQAAAAAdAAAAABAE" />
 
     <title>식집사의 기본, 플랜트하이커</title>
   </head>
